--- a/blocks/header/__geoposition/header__geoposition.css
+++ b/blocks/header/__geoposition/header__geoposition.css
@@ -9,7 +9,7 @@
     display: block;
     width: 20px;
     height: 20px;
-    background: url('../images/icons/geo-position.svg') center center/contain no-repeat;
+    background: url('../../../images/icons/geo-position.svg') center center/contain no-repeat;
 }
 
 @media (max-width: 768px) {
