--- a/blocks/header/__menu-bar/header__menu-bar.css
+++ b/blocks/header/__menu-bar/header__menu-bar.css
@@ -1,11 +1,18 @@
 .header__menu-bar {
-    display: block;
     background-color: rgba(31, 161, 129, 1);
     padding: 10px 20px;
 }
 
 @media (max-width: 768px) {
     .header__menu-bar {
-        padding-top: 48px;
+        padding: 48px 20px 0;
+        position: absolute;
+        top: 75px;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(69, 146, 127, 0.9);
+        transform: translateX(-100%);
+        transition: all .5s ease 0s;
     }
 }
