--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     background-color: #fff;
+    transition: background-color .5s ease 0s;
 }
 
 @media (max-width: 768px) {
@@ -9,5 +10,6 @@
         position: fixed;
         top: 0;
         left: 0;
+        z-index: 10;
     }
 }
