--- a/blocks/menu/menu.css
+++ b/blocks/menu/menu.css
@@ -1,16 +1,3 @@
 .menu {
-    position: static;
-    
-}
-@media (max-width: 768px) {
-    .menu {
-        position: absolute;
-        top: 75px;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        background-color: rgba(69, 146, 127, 0.9);
-        transform: translateX(-100%);
-        transition: all .5s ease 0s;
-    }
+    display: block;
 }
