--- a/pages/index.css
+++ b/pages/index.css
@@ -79,6 +79,8 @@
 @import url('../blocks/popup/_open/popup_open.css');
 @import url('../blocks/popup/__window/popup__window.css');
 @import url('../blocks/popup/__window/_open/popup__window_open.css');
+@import url('../blocks/popup/__text-content/popup__text-content.css');
+@import url('../blocks/popup/__text-content/_open/popup__text-content_open.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__text/popup__text.css');
 @import url('../blocks/popup/__close/popup__close.css');
