--- a/blocks/button/__card/button__card.css
+++ b/blocks/button/__card/button__card.css
@@ -6,3 +6,16 @@
 .button__card:first-of-type {
     margin-right: 14px;
 }
+
+@media (max-width: 769px) {
+    .button__card {
+        padding: 11px 30px;
+    }
+}
+
+@media (max-width: 565px) {
+    .button__card {
+        padding: 11px 0px;
+        width: 45%;
+    }
+}
