--- a/blocks/card/__btns/card__btns.css
+++ b/blocks/card/__btns/card__btns.css
@@ -4,3 +4,9 @@
     position: relative;
     z-index: 2;
 }
+
+@media (max-width: 565px) {
+    .card__btns {
+        justify-content: space-between;
+    }
+}
